fix: hero padding on small screen

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/hero/hero.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/hero/hero.scss
@@ -16,6 +16,14 @@
     padding: 2rem 0 5rem;
     text-align: center;
 
+    padding-left: var(--space-unit);
+    padding-right: var(--space-unit);
+
+    @include media-breakpoint-up(lg) {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     @include media-breakpoint-up(xxl) {
         padding-bottom: 1rem;
     }
